# s3-upload-api-multi-parts

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: caching.py  main.py  s3_uploader.py  schemas.py  settings.py  utils.py
src/exceptions/: base.py  caching.py  common.py
