[tool.poetry]
name = "test-upload"
version = "0.1.0"
description = ""
authors = ["vuonglv <it.vuonglv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
python-multipart = "^0.0.5"
uvicorn = "^0.13.3"
aiofiles = "^0.6.0"
aioboto3 = "^8.2.0"
requests = "^2.25.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
